[package]
name = "postfix_log_parser"
version = "0.1.0"
edition = "2021"
authors = ["taesikim"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 'z'
lto=true
codegen-units=1


[dependencies]
actix-rt = "2.6.0"
actix-web = "4.1.0"
actix-cors = "0.6.1"
actix-files = "0.6.1"
actix-identity = "0.4.0"

tokio = { version = "1.15.0", features = ["full"] }
bcrypt = "0.13.0"
chrono = { version = "0.4.19", features = ["serde"] }
derive_more = "0.99.11"
env_logger = "0.9.0"
jsonwebtoken = "8.1.1"
futures = "0.3.21"
serde_derive="1.0.117"
serde_json="1.0"
serde="1.0.117"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
regex = "1.4.1"
reqwest = { version = "0.11", features = ["socks","json"] }
scraper = "0.13.0"
flate2 = "1.0"
dateparser = "0.1.7"